getChildResources(). Comments. Cleanups.